# web-server

./: .gitignore  Cargo.toml  README.md  sqlite.db
src/: database.rs  frontend.rs  index.html  main.rs
static/: index.html  login.html  script.js  style.css
