[package]
name = "web-server"
version = "0.1.5"
edition = "2024"

[dependencies]
axum = "0.8.7"
tokio = { version = "1.48.0", features = ["full"] }
craftping = { version = "0.7.0", features = ["async-tokio"] }
sqlx = {version = "0.8.6", features = ["sqlite", "runtime-tokio", "macros"]}
serde = { version = "1.0.228", features = ["derive"] }
argon2 = "0.5.3"
rand = "0.8.5"
hex = "0.4.3"
tower-http = {version = "0.5.0", features = ["fs", "cors"]}
chrono = "0.4.42"
